--- a/styles/footer.styl
+++ b/styles/footer.styl
@@ -14,10 +14,9 @@ footer
 
 	a
 		display: inline-block
-		font:
-			family: $header-font
+		font-family: $header-font
 		color: #fff
-		&:hover
+		a:hover
 			color: rgba(0,0,0,1)
 
 @media (max-width: 640px)
@@ -25,6 +24,5 @@ footer
 		height: 200px
 		background-position: center center
 		color: #000
-
 		a
 			color: #000
