Better Stylus files

--- a/styles/about.styl
+++ b/styles/about.styl
@@ -3,7 +3,7 @@ section
 	h3
 		font-family $header-font
 		font-size 40px
-		color $accent-color
+		color accent-color
 		text-align center
 
 	.face-lockup
@@ -22,5 +22,5 @@ section
 	p
 		margin-top 100px
 		text-align center
-		font-family $base-font-family
+		font-family base-font-family
 		font-size 20px
