--- a/styles/footer.styl
+++ b/styles/footer.styl
@@ -1,28 +1,28 @@
 footer
-	height: 80px
-	background: url(../img/footer.jpg)
-	background-size: cover
-	background-position: center 110px
-	padding-top: 30px
-	color: #fff
+	height 80px
+	background url(../img/footer.jpg)
+	background-size cover
+	background-position center 110px
+	padding-top 30px
+	color #fff
 	p
-		float: left
-		margin: 0
+		float left
+		margin 0
 	nav
-		float: right
-		margin-right: 20px
+		float right
+		margin-right 20px
 
 	a
-		display: inline-block
-		font-family: $header-font
-		color: #fff
-		a:hover
-			color: rgba(0,0,0,1)
+		display inline-block
+		font-family header-font
+		color #fff
+		ahover
+			color rgba(0,0,0,1)
 
-@media (max-width: 640px)
+@media (max-width 640px)
 	footer
-		height: 200px
-		background-position: center center
-		color: #000
+		height 200px
+		background-position center center
+		color #000
 		a
-			color: #000
+			color #000
