--- a/styles/main.styl
+++ b/styles/main.styl
@@ -2,13 +2,13 @@
 @import url('http://fonts.googleapis.com/css?family=Fjord+One|Inconsolata');
 
 // Our variables
-$header-font = 'Inconsolata'
-$base-font-family = 'Fjord One'
-$normal-section-height = 100vh
-$mobile-section-height = 460px
-$text-color = #111
-$background-color = #aaa
-$accent-color = #383838
+header-font = 'Inconsolata'
+base-font-family = 'Fjord One'
+normal-section-height = 100vh
+mobile-section-height = 460px
+text-color = #111
+background-color = #aaa
+accent-color = #383838
 
 @import './header.styl'
 @import './body.styl'
