Changed to use SMACSS for the styles

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -10,7 +10,6 @@ text-color = #111
 background-color = #aaa
 accent-color = #383838
 
-@import './header.styl'
-@import './body.styl'
-@import './footer.styl'
-@import './about.styl'
+@import './layout.styl'
+@import './base.styl'
+@import './modules.styl'
