New Work section

--- a/styles/layout.styl
+++ b/styles/layout.styl
@@ -7,7 +7,17 @@ header
 		float left
 #about
 	padding 40px
+	height normal-section-height
+		
+#background
+	height normal-section-height
+	background url(../img/background.jpg)
+	background-size cover
+	background-position center center
 
+#work
+	margin 0
+	height normal-section-height
 footer
 	height 80px
 	background url(../img/footer.jpg)
