--- a/styles/modules/about.styl
+++ b/styles/modules/about.styl
@@ -1,13 +1,13 @@
 .about-title
-		font-family $header-font
-		font-size 40px
-		color accent-color
-		text-align center
+	font-family header-font
+	font-size 40px
+	color accent-color
+	text-align center
 
 .face-lockup
-		max-width 780px
-		display flex
-		margin 0 auto
+	max-width 780px
+	display flex
+	margin 0 auto
 .face
 	border-radius 100%
 	height 200px
