--- a/styles/modules/work.styl
+++ b/styles/modules/work.styl
@@ -15,15 +15,15 @@
 
 .work-list--item
 	margin 0 auto
-	
+	padding-top 20px
 	max-width 900px
 	text-align center
-	box-shadow 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26)
+	box-shadow 0 10px 10px 0 rgba(0, 0, 0, 0.16), 0 10px 10px 0 rgba(0, 0, 0, 0.26)
 	background #656565
 	a
 		color white
 		font-family header-font
-		font-size 20px
+		font-size 30px
 		text-decoration: none
 	
 	p
